# langdev.blog

./: .concatignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compose.yml  flake.nix  meta.ps1  package-lock.json  tailwind.config.js
crates/compiler/: Cargo.toml  README.md
crates/compiler/src/: driver.rs  error.rs  lib.rs  meta.rs  options.rs
crates/compiler/src/html/: basic.html
crates/server/: Cargo.toml
crates/server/src/: cookie.rs  csrf.rs  env.rs  error.rs  main.rs
crates/server/src/auth/: token.rs
crates/server/src/content/: cache.rs  index.rs  mod.rs
crates/server/src/content/sql/: schema.sql
crates/server/src/db/: mod.rs  model.rs
crates/server/src/email/: mod.rs  template.rs
crates/server/src/route/: index.rs  login.rs  mod.rs  post.rs  prelude.rs  upload.rs
crates/server/src/template/: basic.rs  header.rs  mod.rs  post_card.rs  prelude.rs
crates/server/src/totp/: mod.rs
docs/: devenv.md
migrations/: 20250516151727_create-users.sql  20250721220429_insert-admin.sql  20250727025754_create-invites.sql
scripts/: upload.sh
test/: meta.toml
