[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
log = "0.4.27"
mail-builder = "0.4.3"
mail-send = "0.5.1"
maud = { version = "0.27.0", features = ["rocket"] }
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-rustls = "0.26.2"
compiler.workspace = true
libsql = "0.9.18"
